--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="./src/img/logo.png">
     <link rel="stylesheet" href="./src/output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
@@ -44,7 +45,7 @@
                     </div>
                     <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start gap-6">
                         <div class="flex shrink-0 items-center">
-                            <img class="h-6 w-auto" src="./img/logo.png" alt="Company Logo">
+                            <img class="h-6 w-auto" src="./src/img/logo.png" alt="Company Logo">
                         </div>
                         <div class="hidden sm:ml-6 sm:flex sm:space-x-3 font-krona">
                             <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
@@ -104,7 +105,7 @@
 
         <!-- banner-middle-area + banner iccon -->
         <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center ">
-            <img src="./img/banner-icon.png" class="h-[100%]" alt="">
+            <img src="./src/img/banner-icon.png" class="h-[100%]" alt="">
         </section>
         
         <!-- banner-botton-area + "HAVE FUN"s -->
