--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                         <!-- ham menu button -->
                         <button type="button"
-                            class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-rose-400 active:opacity-60"
+                            class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-40 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-rose-400 active:opacity-60"
                             aria-controls="mobile-menu" aria-expanded="false">
                             <span class="absolute -inset-0.5"></span>
                             <span class="sr-only">Open main menu</span>
@@ -98,7 +98,7 @@
         </nav>
 
         <!-- banner -->
-        <!-- banner-top+ slogan -->
+        <!-- banner-top + title -->
         <section class="w-screen h-[45%] flex justify-center items-center pt-[15%]">
             <p
                 class="font-libreBodoni_boldItalic text-rose-400 text-[70px] sm:text-[120px] md:text-[150px] lg:text-[200px] 2xl:text-[250px]">
@@ -107,11 +107,11 @@
         </section>
 
         <!-- banner-middle + star icon -->
-        <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center ">
-            <img src="./src/img/banner-icon.png" class="h-[80%] lg:h-[100%]" alt="">
+        <section class="w-screen h-[15%] flex justify-center items-center ">
+            <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
         </section>
 
-        <!-- banner-botton + "HAVE FUN"s -->
+        <!-- banner-botton + texts -->
         <section class="w-screen h-[15%] mx-auto xl:max-w-7xl flex justify-center items-center gap-x-20 lg:pt-[5%]">
             <p class="small-text text-neutral-100 hidden lg:block lg:text-2xl xl:text-3xl font-krona">{{&nbsp;Have
                 Fun&nbsp;}}</p>
@@ -130,36 +130,75 @@
     <main class="w-screen h-screen">
         <!-- main-1-bg -->
         <section class="w-[100%] h-[100%] bg-mainBG-1 bg-no-repeat bg-cover md:bg-top">
-            <section class="text-gray-200 w-screen h-[45%] flex justify-center items-center pt-[15%]">
+            <section class="text-gray-50 w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <section class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Grand Canyon</p>
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">National Park</p>
                 </section>
             </section>
 
-            <!-- main-1 star icon -->
+            <!-- main-1-middle star icon -->
             <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
-                <img src="./src/img/banner-icon.png" class="h-[80%] lg:h-[100%]" alt="">
+                <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
             </section>
 
-            <!-- banner-botton-area + "HAVE FUN"s -->
-            <section class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
+            <!-- main-1-botton + texts-->
+            <section
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
                 <p class="small-text text-neutral-100 md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Natural Wonder</p>
                 <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Arizona, USA
                 </p>
             </section>
+        </section>
 
-            <!-- arrow icon  -->
-            <!-- <div class="icon-arrow flex justify-center h-[10%] lg:items-center">
-                    <img src="./src/img/banner-icon-arrow.png" class="h-8" alt="arrow icon">
-                </div> -->
+        <!-- main-2-bg -->
+        <section class="w-[100%] h-[100%] bg-mainBG-2 bg-no-repeat bg-cover md:bg-top">
+            <section class="text-gray-50 w-screen h-[45%] flex justify-center items-center pt-[15%]">
+                <section class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
+                    <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Pragser</p>
+                    <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Wildsee</p>
+                </section>
+            </section>
 
-            <!-- main-1st-banner -  context -->
-            <!-- <section class="context text-gray-200 space-y-10 h-[50%] flex flex-col justify-end items-end pb-20 pe-8">
-                <p class="text-5xl font-krona">A Majestic Natural Wonder</p>
-                <p class="text-5xl font-krona">in Arizona, USA</p>
-            </section> -->
+            <!-- main-2-middle star icon -->
+            <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+                <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
+            </section>
+
+            <!-- main-2-botton + texts-->
+            <section
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
+                <p class="small-text text-neutral-100 md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">An
+                    Emerald Green Lake</p>
+                <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in the Dolomites,
+                    Italy</p>
+            </section>
+        </section>
+
+        <!-- main-3-bg -->
+        <section class="w-[100%] h-[100%] bg-mainBG-3 bg-no-repeat bg-cover md:bg-top">
+            <section class="text-gray-50 w-screen h-[45%] flex justify-center items-center pt-[15%]">
+                <section class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
+                    <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Mount</p>
+                    <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Fuji</p>
+                </section>
+            </section>
+
+            <!-- main-3-middle star icon -->
+            <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+                <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
+            </section>
+
+            <!-- main-3-botton + texts-->
+            <section
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
+                <p class="small-text text-neutral-100 md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
+                    A Majestic Active Volcano </p>
+                <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Shizuoka, Japan
+                </p>
+            </section>
+        </section>
     </main>
 
 
