--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- banner-top + title -->
         <section class="w-screen h-[45%] flex justify-center items-center pt-[15%]">
             <p
-                class="font-libreBodoni_boldItalic text-rose-400 text-[70px] sm:text-[120px] md:text-[150px] lg:text-[200px] 2xl:text-[250px]">
+                class="font-libreBodoni_boldItalic text-rose-400 text-[70px] sm:text-[120px] md:text-[120px] lg:text-[180px]">
                 <span class="italic">Explorer</span>
             </p>
         </section>
@@ -195,8 +195,24 @@
                 class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
                 <p class="small-text text-neutral-100 md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Active Volcano </p>
-                <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Shizuoka, Japan
+                <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Shizuoka,
+                    Japan
                 </p>
+            </section>
+        </section>
+
+        <!-- main-4 marquee -->
+        <section class="h-[120px] lg:h-[200px] bg-lightGray text-[40px] lg:text-[100px] text-rose-300 font-krona">
+            <section class="relative w-screen max-w-full h-[100%] overflow-x-hidden">
+                <section
+                    class="absolute whitespace-nowrap will-change-transform animate-marquee pt-[30px] lg:pt-[25px]">
+                    <section class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
+                            class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
+                            class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
+                            class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
+                            class="fa-solid fa-quote-right"></i> Slow
+                        Tourism&nbsp;&nbsp;<i class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism</section>
+                </section>
             </section>
         </section>
     </main>
