feat:mian-5 RWD

--- a/main.html
+++ b/main.html
@@ -73,7 +73,7 @@
     </section>
 
     <!-- main-4th-banner - you can find -->
-    <section class="w-[100%] h-[100%] bg-mainBG-4 bg-no-repeat font-krona">
+    <!-- <section class="w-[100%] h-[100%] bg-mainBG-4 bg-no-repeat font-krona">
         <section class="title text-rose-400 text-7xl w-[100%] h-[60%] flex justify-end pt-[12%] pe-[5%]">
             <p>You Can Find /</p>
         </section>
@@ -83,10 +83,10 @@
             <p>Ecotourism</p>
             <p>Culture Experience</p>
         </section>
-    </section>
+    </section> -->
 
     <!-- main-5th-banner we provide-->
-    <section class="w-[100%] h-[100%] bg-mainBG-5 bg-no-repeat font-krona">
+    <!-- <section class="w-[100%] h-[100%] bg-mainBG-5 bg-no-repeat font-krona">
         <section class="title text-rose-400 text-7xl w-[100%] h-[60%] flex justify-end pt-[12%] pe-[5%]">
             <p>We Provide /</p>
         </section>
@@ -96,7 +96,7 @@
             <p>Shuttle Services</p>
             <p>Activities Reservations</p>
         </section>
-    </section>
+    </section> -->
 
     <!-- main-6th-banner - video -->
     <section class="w-[100%] h-[100%] bg-mainBG-6 bg-no-repeat font-krona flex justify-center items-center relative">
