--- a/index.html
+++ b/index.html
@@ -10,37 +10,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 
-<body class="w-screen h-screen relative border-box ">
+<body class="w-screen h-screen relative border-box bg-lightGray">
     <header class="w-[100%] h-[100%] bg-banner bg-no-repeat bg-cover">
         <nav class="bg-white/50 shadow fixed top-0 left-0 right-0 z-20">
             <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
                 <div class="relative flex h-20 justify-between">
                     <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
 
-                        <!-- ham menu button -->
+                        <!-- ham dropdown menu button -->
                         <button type="button"
                             class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-40 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-rose-400 active:opacity-60"
                             aria-controls="mobile-menu" aria-expanded="false">
-                            <span class="absolute -inset-0.5"></span>
-                            <span class="sr-only">Open main menu</span>
-                            <!--
-                      Icon when menu is closed.
-          
-                      Menu open: "hidden", Menu closed: "block"
-                    -->
+
                             <svg class="block size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" aria-hidden="true" data-slot="icon">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                            </svg>
-                            <!--
-                      Icon when menu is open.
-          
-                      Menu open: "block", Menu closed: "hidden"
-                    -->
-                            <svg class="hidden size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" aria-hidden="true" data-slot="icon">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
                             </svg>
                         </button>
                     </div>
@@ -99,27 +84,27 @@
 
         <!-- banner -->
         <!-- banner-top + title -->
-        <section class="w-screen h-[45%] flex justify-center items-center pt-[15%]">
-            <p
-                class="font-libreBodoni_boldItalic text-rose-400 text-[70px] sm:text-[120px] md:text-[120px] lg:text-[180px]">
+        <div class="w-screen h-[45%] flex justify-center items-center pt-[15%]">
+            <h1
+                class="font-libreBodoni_boldItalic text-rose-400 text-[70px] sm:text-[120px] md:text-[120px] lg:text-[160px]">
                 <span class="italic">Explorer</span>
-            </p>
-        </section>
+            </h1>
+        </div>
 
         <!-- banner-middle + star icon -->
-        <section class="w-screen h-[15%] flex justify-center items-center ">
+        <div class="w-screen h-[15%] flex justify-center items-center ">
             <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
-        </section>
+        </div>
 
         <!-- banner-botton + texts -->
-        <section class="w-screen h-[15%] mx-auto xl:max-w-7xl flex justify-center items-center gap-x-20 lg:pt-[5%]">
-            <p class="small-text text-neutral-100 hidden lg:block lg:text-2xl xl:text-3xl font-krona">{{&nbsp;Have
+        <div class="w-screen h-[15%] mx-auto xl:max-w-7xl flex justify-center items-center gap-x-20 lg:pt-[5%]">
+            <p class="small-text text-lightGray hidden lg:block lg:text-2xl font-krona">{{&nbsp;Have
                 Fun&nbsp;}}</p>
-            <p class="small-text text-neutral-100 text-2xl lg:text-2xl  xl:text-3xl font-krona">{{&nbsp;Have Fun&nbsp;}}
+            <p class="small-text text-lightGray text-2xl lg:text-2xl font-krona">{{&nbsp;Have Fun&nbsp;}}
             </p>
-            <p class="small-text text-neutral-100 hidden lg:block lg:text-2xl  xl:text-3xl font-krona">{{&nbsp;Have
+            <p class="small-text text-lightGray hidden lg:block lg:text-2xl font-krona">{{&nbsp;Have
                 Fun&nbsp;}}</p>
-        </section>
+        </div>
 
         <!-- banner-botton + arrow icon  -->
         <div class="icon-arrow flex justify-center h-[10%] lg:items-center">
@@ -129,92 +114,132 @@
 
     <main class="w-screen h-screen">
         <!-- main-1-bg -->
-        <section class="w-[100%] h-[100%] bg-mainBG-1 bg-no-repeat bg-cover md:bg-top">
-            <section class="text-gray-50 w-screen h-[45%] flex justify-center items-center pt-[15%]">
-                <section class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
+        <section class="w-[100%] h-[100%] bg-main-1-bg bg-no-repeat bg-cover md:bg-top">
+            <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
+                <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Grand Canyon</p>
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">National Park</p>
-                </section>
-            </section>
+                </div>
+            </div>
 
             <!-- main-1-middle star icon -->
-            <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
                 <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
-            </section>
+            </div>
 
             <!-- main-1-botton + texts-->
-            <section
+            <div
                 class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
-                <p class="small-text text-neutral-100 md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
+                <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Natural Wonder</p>
-                <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Arizona, USA
+                <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Arizona, USA
                 </p>
-            </section>
+            </div>
         </section>
 
         <!-- main-2-bg -->
-        <section class="w-[100%] h-[100%] bg-mainBG-2 bg-no-repeat bg-cover md:bg-top">
-            <section class="text-gray-50 w-screen h-[45%] flex justify-center items-center pt-[15%]">
-                <section class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
+        <section class="w-[100%] h-[100%] bg-main-2-bg bg-no-repeat bg-cover md:bg-top">
+            <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
+                <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Pragser</p>
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Wildsee</p>
-                </section>
-            </section>
+                </div>
+            </div>
 
             <!-- main-2-middle star icon -->
-            <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
                 <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
-            </section>
+            </div>
 
             <!-- main-2-botton + texts-->
-            <section
+            <div
                 class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
-                <p class="small-text text-neutral-100 md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">An
+                <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">An
                     Emerald Green Lake</p>
-                <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in the Dolomites,
+                <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in the Dolomites,
                     Italy</p>
-            </section>
+            </div>
         </section>
 
         <!-- main-3-bg -->
-        <section class="w-[100%] h-[100%] bg-mainBG-3 bg-no-repeat bg-cover md:bg-top">
-            <section class="text-gray-50 w-screen h-[45%] flex justify-center items-center pt-[15%]">
-                <section class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
+        <section class="w-[100%] h-[100%] bg-main-3-bg bg-no-repeat bg-cover md:bg-top">
+            <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
+                <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Mount</p>
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Fuji</p>
-                </section>
-            </section>
+                </div>
+            </div>
 
             <!-- main-3-middle star icon -->
-            <section class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
                 <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
-            </section>
+            </div>
 
             <!-- main-3-botton + texts-->
-            <section
+            <div
                 class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
-                <p class="small-text text-neutral-100 md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
+                <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Active Volcano </p>
-                <p class="small-text text-neutral-100 md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Shizuoka,
+                <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Shizuoka,
                     Japan
                 </p>
-            </section>
+            </div>
         </section>
 
         <!-- main-4 marquee -->
         <section class="h-[120px] lg:h-[200px] bg-lightGray text-[40px] lg:text-[100px] text-rose-300 font-krona">
-            <section class="relative w-screen max-w-full h-[100%] overflow-x-hidden">
-                <section
-                    class="absolute whitespace-nowrap will-change-transform animate-marquee pt-[30px] lg:pt-[25px]">
-                    <section class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
+            <div class="relative w-screen max-w-full h-[100%] overflow-x-hidden">
+                <div class="absolute whitespace-nowrap will-change-transform animate-marquee pt-[30px] lg:pt-[25px]">
+                    <div class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
                             class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
                             class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
                             class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
                             class="fa-solid fa-quote-right"></i> Slow
-                        Tourism&nbsp;&nbsp;<i class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism</section>
-                </section>
-            </section>
+                        Tourism&nbsp;&nbsp;<i class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism</div>
+                </div>
+            </div>
         </section>
+
+        <!-- main-5-bg -->
+        <section class="w-screen h-screen">
+            <div class="w-[100%] h-[40%] flex justify-center mb-14">
+                <div class="w-[75%] h-[100%]">
+                    <img src="./src/img/main-5.png" class="rounded-2xl w-[100%] h-[100%] object-cover" alt="">
+                </div>
+            </div>
+
+            <!-- main-5 middle texts -->
+            <div class="h-[25%] flex flex-col items-center md:h-[20%]">
+                <p class="font-krona text-rose-400 text-3xl mb-8">We Provide</p>
+                <div class="font-krona flex flex-col items-center space-y-2">
+                    <p>Sightseeing Tours</p>
+                    <p>Shuttle Services</p>
+                    <p>Activities Reservations</p>
+                </div>
+            </div>
+
+            <!-- main-5 bottom icon -->
+            <div class="h-[3%] flex justify-center">
+                <img src="./src/img/main-5-icon.png" class="object-cover" alt="">
+            </div>
+
+        </section>
+
+        <!-- main-5th-banner we provide-->
+        <!-- <section class="w-[100%] h-[100%] bg-mainBG-5 bg-no-repeat font-krona">
+        <section class="title text-rose-400 text-7xl w-[100%] h-[60%] flex justify-end pt-[12%] pe-[5%]">
+            <p>We Provide /</p>
+        </section>
+        <div class="line w-[20%] h-[0.5%] bg-rose-400 ms-auto me-[5%]"></div>
+        <section class="context text-gray-900 text-5xl w-[100%] h-[30%] flex flex-col space-y-8 items-end p-[5%]">
+            <p>Sightseeing Tours</p>
+            <p>Shuttle Services</p>
+            <p>Activities Reservations</p>
+        </section>
+    </section> -->
+
+
+
     </main>
 
 
