fix:main-5 layout調整

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <!-- Mobile menu, show/hide based on menu state. -->
-            <div class="sm:hidden" id="mobile-menu">
+            <!-- <div class="sm:hidden" id="mobile-menu">
                 <div class="space-y-1 pb-4 pt-2">
                     <a href="#"
                         class="block border-l-4 hover:border-rose-400 hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-rose-400 active:opacity-60">Home</a>
@@ -79,7 +79,7 @@
                         class="block border-l-4 hover:border-rose-400 hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-rose-400 active:opacity-60">About
                         Us</a>
                 </div>
-            </div>
+            </div> -->
         </nav>
 
         <!-- banner -->
@@ -114,7 +114,7 @@
 
     <main class="w-screen h-screen">
         <!-- main-1-bg -->
-        <section class="w-[100%] h-[100%] bg-main-1-bg bg-no-repeat bg-cover md:bg-top">
+        <section class="w-[100%] h-[100%] bg-main-1-bg bg-no-repeat bg-cover md:bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Grand Canyon</p>
@@ -138,7 +138,7 @@
         </section>
 
         <!-- main-2-bg -->
-        <section class="w-[100%] h-[100%] bg-main-2-bg bg-no-repeat bg-cover md:bg-top">
+        <section class="w-[100%] h-[100%] bg-main-2-bg bg-no-repeat bg-right md:bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Pragser</p>
@@ -162,7 +162,7 @@
         </section>
 
         <!-- main-3-bg -->
-        <section class="w-[100%] h-[100%] bg-main-3-bg bg-no-repeat bg-cover md:bg-top">
+        <section class="w-[100%] h-[100%] bg-main-3-bg bg-no-repeat bg-center md:bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Mount</p>
@@ -200,30 +200,39 @@
             </div>
         </section>
 
+        <!-- main-5 測試 -->
+
+
         <!-- main-5-bg -->
-        <section class="w-screen h-screen">
-            <div class="w-[100%] h-[40%] flex justify-center mb-14">
+        <!-- <section class="w-screen h-screen">
+            <div class="w-[100%] h-[40%] flex justify-center mb-14 lg:hidden">
                 <div class="w-[75%] h-[100%]">
                     <img src="./src/img/main-5.png" class="rounded-2xl w-[100%] h-[100%] object-cover" alt="">
                 </div>
-            </div>
+            </div> -->
 
             <!-- main-5 middle texts -->
-            <div class="h-[25%] flex flex-col items-center md:h-[20%]">
+            <!-- <div class="h-[25%] flex flex-col items-center md:h-[20%]">
                 <p class="font-krona text-rose-400 text-3xl mb-8">We Provide</p>
                 <div class="font-krona flex flex-col items-center space-y-2">
                     <p>Sightseeing Tours</p>
                     <p>Shuttle Services</p>
                     <p>Activities Reservations</p>
                 </div>
-            </div>
+            </div> -->
 
             <!-- main-5 bottom icon -->
-            <div class="h-[3%] flex justify-center">
+            <!-- <div class="h-[3%] flex justify-center">
                 <img src="./src/img/main-5-icon.png" class="object-cover" alt="">
             </div>
 
-        </section>
+        </section> -->
+
+
+
+
+
+
 
         <!-- main-5th-banner we provide-->
         <!-- <section class="w-[100%] h-[100%] bg-mainBG-5 bg-no-repeat font-krona">
