--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <main class="w-screen h-screen">
         <!-- main-1-bg -->
-        <section class="w-[100%] h-[100%] bg-main-1-bg bg-no-repeat bg-cover md:bg-cover">
+        <section class="w-[100%] h-[100%] max-h-[400px] md:max-h-[700px] bg-main-1-bg bg-no-repeat bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Grand Canyon</p>
@@ -123,13 +123,13 @@
             </div>
 
             <!-- main-1-middle star icon -->
-            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-80">
                 <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
             </div>
 
             <!-- main-1-botton + texts-->
             <div
-                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[0%] lg:pt-[5%]">
                 <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Natural Wonder</p>
                 <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Arizona, USA
@@ -138,7 +138,7 @@
         </section>
 
         <!-- main-2-bg -->
-        <section class="w-[100%] h-[100%] bg-main-2-bg bg-no-repeat bg-right md:bg-cover">
+        <section class="w-[100%] h-[100%] max-h-[400px] md:max-h-[700px] bg-main-2-bg bg-no-repeat bg-cover">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Pragser</p>
@@ -147,13 +147,13 @@
             </div>
 
             <!-- main-2-middle star icon -->
-            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-80">
                 <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
             </div>
 
             <!-- main-2-botton + texts-->
             <div
-                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[0%] lg:pt-[5%]">
                 <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">An
                     Emerald Green Lake</p>
                 <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in the Dolomites,
@@ -162,7 +162,7 @@
         </section>
 
         <!-- main-3-bg -->
-        <section class="w-[100%] h-[100%] bg-main-3-bg bg-no-repeat bg-center md:bg-cover">
+        <section class="w-[100%] h-[100%] max-h-[400px] md:max-h-[700px] bg-main-3-bg bg-no-repeat bg-cover mb-10">
             <div class="text-lightGray w-screen h-[45%] flex justify-center items-center pt-[15%]">
                 <div class="flex justify-center items-center flex-col space-y-3 md:space-y-5">
                     <p class="text-3xl md:text-5xl lg:text-7xl font-krona">Mount</p>
@@ -171,13 +171,13 @@
             </div>
 
             <!-- main-3-middle star icon -->
-            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-65">
+            <div class="banner-middle-area w-screen h-[15%] flex justify-center items-center opacity-80">
                 <img src="./src/img/banner-icon.png" class="h-[60%]" alt="">
             </div>
 
             <!-- main-3-botton + texts-->
             <div
-                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[30%] lg:pt-[5%]">
+                class="w-screen h-[15%] mx-auto xl:max-w-7xl flex flex-col space-y-4 justify-center items-center gap-x-20 pt-[0%] lg:pt-[5%]">
                 <p class="small-text text-lightGray md:text-2xl lg:block lg:text-2xl xl:text-3xl font-krona">
                     A Majestic Active Volcano </p>
                 <p class="small-text text-lightGray md:text-2xl lg:text-2xl  xl:text-3xl font-krona">in Shizuoka,
@@ -187,9 +187,9 @@
         </section>
 
         <!-- main-4 marquee -->
-        <section class="h-[120px] lg:h-[200px] bg-lightGray text-[40px] lg:text-[100px] text-rose-300 font-krona">
+        <section class="h-[80px] bg-lightGray text-4xl text-rose-300 font-krona">
             <div class="relative w-screen max-w-full h-[100%] overflow-x-hidden">
-                <div class="absolute whitespace-nowrap will-change-transform animate-marquee pt-[30px] lg:pt-[25px]">
+                <div class="absolute whitespace-nowrap will-change-transform animate-marquee">
                     <div class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
                             class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
                             class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
@@ -200,55 +200,50 @@
             </div>
         </section>
 
-        <!-- main-5 測試 -->
-
-
         <!-- main-5-bg -->
-        <!-- <section class="w-screen h-screen">
-            <div class="w-[100%] h-[40%] flex justify-center mb-14 lg:hidden">
-                <div class="w-[75%] h-[100%]">
+        <section class="w-screen h-screen">
+            <div class="lg:hidden w-[100%] h-[40%] flex justify-center mb-14 md:mb-16">
+                <div class="w-[75%] h-[100%] md:w-[80%]">
                     <img src="./src/img/main-5.png" class="rounded-2xl w-[100%] h-[100%] object-cover" alt="">
                 </div>
-            </div> -->
+            </div>
 
             <!-- main-5 middle texts -->
-            <!-- <div class="h-[25%] flex flex-col items-center md:h-[20%]">
-                <p class="font-krona text-rose-400 text-3xl mb-8">We Provide</p>
-                <div class="font-krona flex flex-col items-center space-y-2">
+            <div class="lg:hidden h-[50%] flex flex-col items-center">
+                <p class="font-krona text-rose-400 text-3xl lg:text-5xl mb-8">We Provide</p>
+                <div class="font-krona lg:text-3xl flex flex-col items-center space-y-2 mb-10">
                     <p>Sightseeing Tours</p>
                     <p>Shuttle Services</p>
                     <p>Activities Reservations</p>
                 </div>
-            </div> -->
-
-            <!-- main-5 bottom icon -->
-            <!-- <div class="h-[3%] flex justify-center">
-                <img src="./src/img/main-5-icon.png" class="object-cover" alt="">
+                <div class="h-[6%] flex justify-center">
+                    <img src="./src/img/main-5-icon.png" class="object-cover" alt="">
+                </div>
             </div>
 
-        </section> -->
+            <!-- main-5 lg only -->
+            <div class="hidden lg:block w-screen h-screen">
+                <div class="grid grid-cols-12 h-full">
+                    <div class="col-span-5 flex justify-center">
+                        <img src="./src/img/main-5.png" class="h-full max-h-[900px] object-cover" alt="">
+                    </div>
+                    <div class="col-span-7 h-full flex flex-col items-center justify-center max-h-[900px]">
+                        <p class="font-krona text-rose-400 text-3xl lg:text-5xl mb-14">We Provide</p>
+                        <div class="font-krona lg:text-2xl flex flex-col items-center space-y-5 mb-16">
+                            <p>Sightseeing Tours</p>
+                            <p>Shuttle Services</p>
+                            <p>Activities Reservations</p>
+                        </div>
+                        <div class="h-[4%] flex justify-center">
+                            <img src="./src/img/main-5-icon.png" class="object-cover" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
-
-
-
-
-        <!-- main-5th-banner we provide-->
-        <!-- <section class="w-[100%] h-[100%] bg-mainBG-5 bg-no-repeat font-krona">
-        <section class="title text-rose-400 text-7xl w-[100%] h-[60%] flex justify-end pt-[12%] pe-[5%]">
-            <p>We Provide /</p>
         </section>
-        <div class="line w-[20%] h-[0.5%] bg-rose-400 ms-auto me-[5%]"></div>
-        <section class="context text-gray-900 text-5xl w-[100%] h-[30%] flex flex-col space-y-8 items-end p-[5%]">
-            <p>Sightseeing Tours</p>
-            <p>Shuttle Services</p>
-            <p>Activities Reservations</p>
-        </section>
-    </section> -->
-
-
-
     </main>
 
 
