feat: nav user icon

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start gap-6">
+                    <div class="flex flex-1 items-center justify-center sm:justify-start gap-6">
                         <div class="flex shrink-0 items-center">
                             <a href="#"><img class="h-7 w-auto" src="./src/img/logo.png" alt="Company Logo"></a>
                         </div>
@@ -51,18 +51,19 @@
                         </div>
                     </div>
 
-                    <!-- Cart icon -->
-                    <div
-                        class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+                    <!-- user icon -->
+                    <div class="absolute right-12 top-5">
                         <button type="button"
-                            class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none active:opacity-60">
-                            <span class="absolute -inset-1.5"></span>
-                            <span class="sr-only">View notifications</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                            </svg>
+                            class="w-10 h-10 rounded-full p-2 text-gray-800 hover:text-subPurple hover:bg-lightGray active:opacity-60 flex justify-center items-center">
+                            <i class="fa-solid fa-user"></i>
+                        </button>
+                    </div>
+
+                    <!-- cart icon -->
+                    <div class="absolute right-0 top-5">
+                        <button type="button"
+                            class="w-10 h-10 rounded-full p-2 text-gray-800 hover:text-subPurple hover:bg-lightGray active:opacity-60  flex justify-center items-center">
+                            <i class="fa-solid fa-cart-shopping"></i>
                         </button>
                     </div>
                 </div>
@@ -284,7 +285,6 @@
             </div>
         </section>
 
-
         <!-- main-7-bg -->
         <section
             class="w-full h-full relative max-h-[400px] bg-main-7-bg bg-no-repeat bg-cover flex justify-center items-center md:max-h-[600px] lg:max-h-full">
@@ -292,7 +292,8 @@
                 <video src="./src/video/main-video.mp4" autoplay loop muted
                     class="w-full h-full rounded-xl object-cover"></video>
             </div>
-            <div class="absolute top-20 md:top-28 lg:top-36 text-mainYellow font-krona text-3xl md:text-6xl lg:text-8xl">
+            <div
+                class="absolute top-20 md:top-28 lg:top-36 text-mainYellow font-krona text-3xl md:text-6xl lg:text-8xl">
                 <p>Start a Journey</p>
             </div>
             <!-- 置中 button => top-[calc(50%-27px)] -->
