feat: header sub title

--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
 
                             <div class="nav-btn flex justify-center items-center">
                                 <a href="#"
-                                    class="inline-flex items-center px-5 py-3 text-sm font-medium text-gray-900 hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90  focus:bg-gray-100 focus:rounded-xl">Home</a>
+                                    class="inline-flex items-center px-5 py-3 text-sm text-gray-900 hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-xl">Home</a>
                             </div>
                             <div class="nav-btn flex justify-center items-center">
                                 <a href="#"
-                                    class="inline-flex items-center px-5 py-3 text-sm font-medium text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90  focus:bg-gray-100 focus:rounded-xl">Shop</a>
+                                    class="inline-flex items-center px-5 py-3 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-xl">Shop</a>
                             </div>
                             <div class="nav-btn flex justify-center items-center">
                                 <a href="#"
-                                    class="inline-flex items-center px-5 py-3 text-sm font-medium text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90  focus:bg-gray-100 focus:rounded-xl">About
-                                    Us</a>
+                                    class="inline-flex items-center px-5 py-3 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-xl">About</a>
                             </div>
                         </div>
                     </div>
@@ -77,19 +76,21 @@
                     <a href="#"
                         class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Shop</a>
                     <a href="#"
-                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">About
-                        Us</a>
+                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">About</a>
                 </div>
             </div> -->
         </nav>
 
         <!-- banner -->
         <!-- banner-top + title -->
-        <div class="w-screen h-[45%] flex justify-center items-center pt-[25%] md:pt-[15%]">
+        <div
+            class="w-screen h-[45%] flex flex-col justify-center items-center pt-[120px] md:pt-[150px] lg:pt-[220px] lg:mb-14">
             <h1
                 class="font-libreBodoni_boldItalic text-mainYellow text-[70px] sm:text-[100px] md:text-[120px] lg:text-[160px]">
-                <span class="italic">Explorer</span>
+                <span class="">Explorer</span>
             </h1>
+            <h2 class="font-libreBodoni_boldItalic text-lightGray text-3xl md:text-4xl lg:text-5xl  tracking-widest">in
+                Iceland</h2>
         </div>
 
         <!-- banner-middle + star icon -->
@@ -184,12 +185,13 @@
         <section class="h-[140px] text-subPurple text-4xl md:text-5xl md:h-[180px] lg:h-[220px] lg:text-7xl">
             <div class="relative w-screen max-w-full h-full overflow-x-hidden flex items-center">
                 <div class="absolute whitespace-nowrap will-change-transform animate-marquee">
-                    <div class="inline-block">&nbsp;Slow Tourism&nbsp;&nbsp;<i
-                            class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
-                            class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
-                            class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism&nbsp;&nbsp;<i
-                            class="fa-solid fa-quote-right"></i> Slow
-                        Tourism&nbsp;&nbsp;<i class="fa-solid fa-quote-right"></i>&nbsp;&nbsp;Slow Tourism</div>
+                    <div class="inline-block">
+                        &nbsp;Iceland&nbsp;&nbsp;
+                        <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;
+                        <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;
+                        <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;<i
+                            class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;<i
+                            class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland</div>
                 </div>
             </div>
         </section>
@@ -207,7 +209,7 @@
                 <p class="text-subPurple text-2xl md:text-4xl mb-6 md:mb-8">We Provide</p>
                 <div class="text-sm md:text-xl flex flex-col items-center space-y-2 mb-10">
                     <p>Glacier Hiking</p>
-                    <p>Volcanic Landscapes</p>
+                    <p>Volcanoes Guide</p>
                     <p>Ice Cave Exploration</p>
                 </div>
                 <div class="h-[10%] flex justify-center">
@@ -225,9 +227,9 @@
                         <div class="main-5-line-1 w-[20%] h-1 bg-subPurple mb-28 opacity-50"></div>
                         <p class="text-subPurple text-3xl lg:text-5xl mb-14">We Provide</p>
                         <div class="text-2xl flex flex-col items-center space-y-4 mb-14">
-                            <p>Sightseeing Tours</p>
-                            <p>Shuttle Services</p>
-                            <p>Activities Reservations</p>
+                            <p>Glacier Hiking</p>
+                            <p>Volcanoes Guide</p>
+                            <p>Ice Cave Exploration</p>
                         </div>
                         <div class="h-[6%] flex justify-center mb-28">
                             <img src="./src/img/main-5-icon.png" class="h-[70%] max-h-[100px] object-cover" alt="">
@@ -289,8 +291,7 @@
                 <video src="./src/video/main-video.mp4" autoplay loop muted
                     class="w-full h-full rounded-xl object-cover"></video>
             </div>
-            <div
-                class="absolute top-20 md:top-28 lg:top-36 text-mainYellow text-3xl md:text-6xl lg:text-8xl">
+            <div class="absolute top-20 md:top-28 lg:top-36 text-mainYellow text-3xl md:text-6xl lg:text-8xl">
                 <p>Start a Journey</p>
             </div>
             <!-- 置中 button => top-[calc(50%-27px)] -->
@@ -302,18 +303,24 @@
     </main>
 
     <footer class="bg-gray-400 text-lightGray">
-        <section class="w-screen h-[200px] lg:h-[300px]">
-            <div class="grid grid-row-12 p-8">
+        <section class="w-screen h-[250px]">
+            <div class="grid grid-row-12 px-8 py-12 justify-center items-center">
                 <div class="row-span-7 flex flex-col justify-center items-center space-y-4 mb-6">
                     <img src="./src/img/logo.png" class="max-w-[40px] max-h-[40px]" alt="">
                     <p class="text-sm">Explore &copy;</p>
                 </div>
                 <div class="row-span-5 flex flex-row justify-center space-x-5 text-md">
-                    <p>Home</p>
+                    <a href="" class="hover:text-mainYellow">
+                        <p>Home</p>
+                    </a>
                     <p>|</p>
-                    <p>Shop</p> 
+                    <a href="" class="hover:text-mainYellow">
+                        <p>Shop</p>
+                    </a>
                     <p>|</p>
-                    <p>About us</p>
+                    <a href="" class="hover:text-mainYellow">
+                        <p>About</p>
+                    </a>
                 </div>
             </div>
         </section>
