fix: main icon star position

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
             <div class="w-screen h-[45%] text-mainYellow flex justify-center items-center pt-[15%]">
                 <div
                     class="text-3xl flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
-                    <p>Klausturholar</p>
+                    <p>Vík</p>
                 </div>
             </div>
-            `
+
             <!-- main-1-middle star icon -->
             <div class="w-screen h-[15%] flex justify-center items-center opacity-80">
                 <img src="./src/img/banner-icon.png" class="h-[60%] max-h-[100px] object-cover" alt="">
@@ -132,8 +132,8 @@
             <!-- main-1-botton + texts-->
             <div
                 class="w-screen h-[15%] text-sm text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
-                <p>Kerid Crater Lake, a natural wonder</p>
-                <p>for trail Exploration</p>
+                <p>A Charming Village</p>
+                <p>for Northern Lights Viewing</p>
             </div>
         </section>
 
@@ -142,20 +142,20 @@
             <div class="w-screen h-[45%] text-mainYellow flex justify-center items-center pt-[15%]">
                 <div
                     class="text-3xl flex flex-col justify-center items-center space-y-3 md:space-y-5 md:text-5xl lg:text-7xl">
-                    <p>Vestrahorn</p>
+                    <p>Vík</p>
                 </div>
             </div>
 
-            <!-- main-2-middle star icon -->
+            <!-- main-3-middle star icon -->
             <div class="w-screen h-[15%] flex justify-center items-center opacity-80">
                 <img src="./src/img/banner-icon.png" class="h-[60%] max-h-[100px] object-cover" alt="">
             </div>
 
-            <!-- main-2-botton + texts-->
+            <!-- main-3-botton + texts-->
             <div
                 class="w-screen h-[15%] text-sm text-lightGray flex flex-col justify-center items-center space-y-3 mx-auto pt-[6%] md:space-y-4 md:text-2xl lg:space-y-6 lg:pt-[5%] lg:text-3xl">
-                <p>A Majestic Mountain</p>
-                <p>for photography and hiking</p>
+                <p>A Charming Village</p>
+                <p>for Northern Lights Viewing</p>
             </div>
         </section>
 
