fix: go top btn

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
         </nav>
 
         <!-- go top btn -->
-        <a href="#"
-            class="invisible md:visible fixed end-16 bottom-20 w-12 h-12 text-subPurple bg-lightGray hover:bg-mainYellow hover:text-subPurple rounded-full flex justify-center items-center z-20">top</a>
+        <div class="fixed end-16 bottom-20 hidden md:block">
+            <a href="#"
+            class=" w-12 h-12 text-subPurple bg-lightGray hover:bg-mainYellow hover:text-subPurple rounded-full flex justify-center items-center z-20">top</a>
+        </div>
 
         <!-- banner -->
         <!-- banner-top + title -->
