feat:新增shop.html

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header class="w-full h-full bg-banner bg-no-repeat bg-cover">
         <nav class="bg-white/50 shadow fixed top-0 left-0 right-0 z-20">
             <div class="mx-auto max-w-6xl px-2 sm:px-6 lg:px-8">
-                <div class="relative flex h-16 lg:h-20 justify-between">
+                <div class="relative flex h-16 justify-between">
                     <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
 
                         <!-- ham dropdown menu button -->
                         <button type="button"
-                            class="relative inline-flex items-center justify-center rounded-md p-3 text-gray-40 hover:bg-lightGray hover:text-subPurple focus:outline-none focus:ring-2 focus:ring-inset focus:ring-subPurple focus:bg-lightGray active:opacity-60"
+                            class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-40 hover:bg-lightGray hover:text-subPurple focus:outline-none focus:ring-2 focus:ring-inset focus:ring-subPurple focus:bg-lightGray active:opacity-60"
                             aria-controls="mobile-menu" aria-expanded="false">
 
                             <svg class="block size-7" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -37,23 +37,23 @@
 
                             <div class="nav-btn flex justify-center items-center">
                                 <a href="#"
-                                    class="inline-flex items-center px-5 py-3 text-sm text-gray-900 hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-xl">Home</a>
+                                    class="inline-flex items-center px-3 py-2 text-sm text-gray-900 hover:bg-lightGray hover:text-subPurple active:bg-opacity-50 hover:rounded-md active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-md">Concept</a>
+                            </div>
+                            <div class="nav-btn flex justify-center items-center">
+                                <a href="./shop.html"
+                                    class="inline-flex items-center px-3 py-2 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50 hover:rounded-md active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-md">Shop</a>
                             </div>
                             <div class="nav-btn flex justify-center items-center">
                                 <a href="#"
-                                    class="inline-flex items-center px-5 py-3 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-xl">Shop</a>
-                            </div>
-                            <div class="nav-btn flex justify-center items-center">
-                                <a href="#"
-                                    class="inline-flex items-center px-5 py-3 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50  hover:rounded-xl active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-xl">About</a>
+                                    class="inline-flex items-center px-3 py-2 text-sm text-gray-900  hover:bg-lightGray hover:text-subPurple active:bg-opacity-50 hover:rounded-md active:text-mainYellow focus:text-gray-800 focus:bg-opacity-90 focus:bg-gray-100 focus:rounded-md">Contact us</a>
                             </div>
                         </div>
                     </div>
 
                     <!-- cart icon -->
-                    <div class="absolute right-2 top-3 lg:top-5">
+                    <div class="flex justify-end items-center me-2">
                         <button type="button"
-                            class="w-10 h-10 rounded-full p-2 text-gray-800 hover:text-subPurple hover:bg-lightGray active:opacity-60  flex justify-center items-center">
+                            class="w-10 h-10 rounded-full p-2 text-gray-800 hover:text-subPurple hover:bg-lightGray active:opacity-60 flex justify-center items-center">
                             <i class="fa-solid fa-cart-shopping"></i>
                         </button>
                     </div>
@@ -64,19 +64,19 @@
             <!-- <div class="sm:hidden" id="mobile-menu">
                 <div class= space-y-1 pb-4 pt-2">
                     <a href="#"
-                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Home</a>
+                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Concept</a>
                     <a href="#"
                         class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Shop</a>
                     <a href="#"
-                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">About</a>
+                        class="block border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 pl-3 pr-4 text-gray-600 font-medium hover:text-subPurple active:opacity-60">Contact us</a>
                 </div>
             </div> -->
         </nav>
 
         <!-- go top btn -->
-        <div class="fixed end-16 bottom-20 hidden md:block">
+        <div class="fixed end-16 bottom-20 hidden md:block z-30">
             <a href="#"
-            class=" w-12 h-12 text-subPurple bg-lightGray hover:bg-mainYellow hover:text-subPurple rounded-full flex justify-center items-center z-20">top</a>
+            class=" w-12 h-12 text-subPurple bg-lightGray hover:bg-mainYellow hover:text-subPurple rounded-full flex justify-center items-center">top</a>
         </div>
 
         <!-- banner -->
@@ -187,9 +187,9 @@
                         &nbsp;Iceland&nbsp;&nbsp;
                         <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;
                         <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;
-                        <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;<i
-                            class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;<i
-                            class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland
+                        <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;
+                        <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland&nbsp;&nbsp;
+                        <i class="fa-solid fa-person-hiking"></i>&nbsp;&nbsp;Iceland
                     </div>
                 </div>
             </div>
@@ -302,23 +302,24 @@
     </main>
 
     <footer class="bg-gray-400 text-lightGray">
-        <section class="w-screen h-[250px]">
-            <div class="grid grid-row-12 px-8 py-12 justify-center items-center">
+        <section class="w-screen h-[350px] md:h-[250px]">
+            <div class="grid grid-row-12 px-8 py-14 md:py-12 justify-center items-center">
                 <div class="row-span-7 flex flex-col justify-center items-center space-y-4 mb-6">
                     <img src="./src/img/logo.png" class="max-w-[40px] max-h-[40px]" alt="">
                     <p class="text-sm">Explore &copy;</p>
                 </div>
-                <div class="row-span-5 flex flex-row justify-center space-x-5 text-md">
+                <div class="row-span-5 flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-5 text-md">
+                    <div class="md:hidden line w-52 h-[1px] bg-lightGray"></div>
                     <a href="" class="hover:text-mainYellow">
-                        <p>Home</p>
+                        <p>Concept</p>
                     </a>
-                    <p>|</p>
+                    <p class="hidden md:block">|</p>
                     <a href="" class="hover:text-mainYellow">
                         <p>Shop</p>
                     </a>
-                    <p>|</p>
+                    <p class="hidden md:block">|</p>
                     <a href="" class="hover:text-mainYellow">
-                        <p>About</p>
+                        <p>Contact us</p>
                     </a>
                 </div>
             </div>
